# pokedex

./: Cargo.toml  Dockerfile  database.sqlite
.devcontainer/: devcontainer.json
src/: main.rs
src/api/: create_pokemon.rs  delete_pokemon.rs  fetch_all_pokemons.rs  fetch_pokemon.rs  health.rs  mod.rs
src/cli/: create_pokemon.rs  delete_pokemon.rs  fetch_all_pokemons.rs  fetch_pokemon.rs  mod.rs
src/domain/: create_pokemon.rs  delete_pokemon.rs  entities.rs  fetch_all_pokemons.rs  fetch_pokemon.rs  mod.rs
src/repositories/: pokemon.rs
