[package]
name = "pokedex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rouille = "3.5.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
clap = "2.33.3"
dialoguer = "0.10.2" 
rusqlite = "0.28.0"